--- a/src/main/resources/META-INF/resources/RandevuSablon.xhtml
+++ b/src/main/resources/META-INF/resources/RandevuSablon.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:p="http://primefaces.org/ui">
 <h:head>
-    <title>Kullanıcı Tanım</title>
+    <title>Randevu Şablon</title>
 
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
     <h:form>
