--- a/src/main/resources/META-INF/resources/PersonelTanim.xhtml
+++ b/src/main/resources/META-INF/resources/PersonelTanim.xhtml
@@ -86,14 +86,15 @@
 
                 <h:outputText value="Personel Email"/>
                 <h:outputText/>
-                <p:inputText id="email" value="#{personelBean.personel.email}">
-                    <f:validateRegex pattern="[\w\.-]*[a-zA-Z0-9_]@[\w\.-]*[a-zA-Z0-9]\.[a-zA-Z][a-zA-Z\.]*[a-zA-Z]"/>
+                <p:inputText id="email" value="#{personelBean.personel.email}" validatorMessage="Email hatalıdır!">
+                    <f:validateRegex
+                            pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$"/>
                 </p:inputText>
                 <p:message for="email"/>
 
                 <h:outputText value="Personel Telefon"/>
                 <h:outputText/>
-                <p:inputText id="tel" value="#{personelBean.personel.telefonNo}"/>
+                <p:inputMask id="tel" value="#{personelBean.personel.telefonNo}" mask="(999) 999-9999"/>
                 <p:message for="tel"/>
 
                 <h:outputText value="Personel Adres"/>
@@ -104,10 +105,9 @@
 
                 <h:outputText value="Cinsiyet"/>
                 <h:outputText value="*"/>
-                <p:selectOneMenu id="cinsiyet" value="#{personelBean.personel.cinsiyet}">
-                    <f:selectItem itemLabel="Erkek" itemValue="1"/>
-                    <f:selectItem itemLabel="Kadın" itemValue="2"/>
-                    <f:selectItem itemLabel="Belirsiz" itemValue="3"/>
+                <p:selectOneMenu id="cinsiyet" value="#{personelBean.cinsiyet}"  converter="#{cinsiyetConverter}" style="width: 100% !important">
+                    <f:selectItem itemLabel="Seçiniz" itemValue=""/>
+                    <f:selectItems var="cinsiyet" value="#{personelBean.cinsiyetList}" itemValue="#{cinsiyet}" itemLabel="#{cinsiyet.adi}"/>
                 </p:selectOneMenu>
                 <p:message for="cinsiyet"/>
 
@@ -118,19 +118,18 @@
 
                 <h:outputText value="Personel Birimi"/>
                 <h:outputText value="*"/>
-                <p:selectOneMenu id="birim" value="#{personelBean.birim}" converter="#{listConverter}">
-                    <f:selectItem itemLabel="Birim Seçiniz" itemValue="#{null}"/>
+                <p:selectOneMenu id="birim" value="#{personelBean.birim}" converter="#{listConverter}" style="width: 100% !important">
+                    <f:selectItem itemLabel="Seçiniz" itemValue="#{null}"/>
                     <f:selectItems value="#{birimBean.birimList}" var="birim" itemValue="#{birim}"
                                    itemLabel="#{birim.birimAdi}"/>
-                    <p:ajax update=":FRMPrsnl:psnlPg" listener="#{personelBean.birim}"/>
                 </p:selectOneMenu>
 
-                <p:commandButton value="Kaydet" actionListener="#{personelBean.save()}" ajax="false"
+                <p:commandButton value="Kaydet" actionListener="#{personelBean.savePersonel()}" ajax="false"
                                  icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
                 <p:commandButton value="Sil" actionListener="#{personelBean.delete()}" ajax="false"
-                                 icon="ui-icon-trash" style="left: 150px"/>
+                                 icon="ui-icon-trash" style="left: 135px"/>
                 <p:commandButton value="Yeni" actionListener="#{personelBean.reset()}" ajax="false"
-                                 icon="ui-icon-trash" style="left: 175px"/>
+                                 icon="ui-icon-plus"/>
 
             </h:panelGrid>
         </div>
