hasta kabul işlemi yapıldı.

--- a/src/main/resources/META-INF/resources/CihazTanim.xhtml
+++ b/src/main/resources/META-INF/resources/CihazTanim.xhtml
@@ -33,6 +33,8 @@
                 <p:menuitem value="Randevu Seans" url="./RandevuSeans.xhtml" icon="fa-calendar"/>
                 <p:menuitem value="Randevu Alma" url="./Randevu.xhtml" icon="fa-calendar"/>
             </p:submenu>
+            <p:menuitem value="Çıkış" style="float: right" action="#{sessionInitializer.exit}" icon="ui-icon-close"/>
+
         </p:menubar>
         <!--<p:menubar model="#{sessionInitializer.menuModel}"/>-->
     </h:form>
