--- a/src/main/resources/META-INF/resources/BirimTanim.xhtml
+++ b/src/main/resources/META-INF/resources/BirimTanim.xhtml
@@ -32,6 +32,8 @@
                 <p:menuitem value="Randevu Seans" url="pages/RandevuSeans.xhtml" icon="fa-calendar"/>
                 <p:menuitem value="Randevu Alma" url="pages/Randevu.xhtml" icon="fa-calendar"/>
             </p:submenu>
+            <p:menuitem value="Çıkış" style="float: right" action="#{sessionInitializer.exit}" icon="ui-icon-close"/>
+
         </p:menubar>
     </h:form>
 </h:head>
