--- a/src/main/resources/META-INF/resources/home.xhtml
+++ b/src/main/resources/META-INF/resources/home.xhtml
@@ -25,6 +25,7 @@
                     <p:menuitem value="Cihaz Tanım" url="./CihazTanim.xhtml"/>
             </p:submenu>
             <p:submenu label="Hasta Kabul İşlemleri">
+                <p:menuitem value="Hasta Kayıt" url="/HastaTanim.xhtml"/>
                 <p:menuitem value="Hasta Kabul" url="/HastaBasvuru.xhtml"/>
                 <p:menuitem value="Doktor Kabul" url="/HastaTetkikIstem.xhtml"/>
                 <p:menuitem value="Tetkik Kabul" url="/TetkikKabul.xhtml" includeViewParams="MR"/>
@@ -34,7 +35,9 @@
                 <p:menuitem value="Randevu Seans" url="pages/RandevuSeans.xhtml" icon="ui-icon-calendar"/>
                 <p:menuitem value="Randevu Alma" url="pages/Randevu.xhtml" icon="ui-icon-calendar"/>
             </p:submenu>
+        <p:menuitem value="Çıkış" style="float: right" action="#{sessionInitializer.exit}" icon="ui-icon-close"/>
         </p:menubar>
+
     </h:form>
 </h:head>
 
