--- a/src/main/resources/META-INF/resources/home.xhtml
+++ b/src/main/resources/META-INF/resources/home.xhtml
@@ -27,7 +27,7 @@
             <p:submenu label="Hasta Kabul İşlemleri">
                 <p:menuitem value="Hasta Kayıt" url="/HastaTanim.xhtml"/>
                 <p:menuitem value="Hasta Kabul" url="/HastaBasvuru.xhtml"/>
-                <p:menuitem value="Doktor Kabul" url="/HastaTetkikIstem.xhtml"/>
+                <p:menuitem value="Tetkik İstem" url="/HastaTetkikIstem.xhtml"/>
                 <p:menuitem value="Tetkik Kabul" url="/TetkikKabul.xhtml" includeViewParams="MR"/>
             </p:submenu>
             <p:submenu label="Randevu İşlemleri" icon="ui-icon-calendar">
