hasta basvuru detay kaydı yapıldı

--- a/src/main/resources/META-INF/resources/TetkikTanim.xhtml
+++ b/src/main/resources/META-INF/resources/TetkikTanim.xhtml
@@ -82,7 +82,7 @@
                              requiredMessage="Tetkik Adı Zorunludur!"/>
                 <p:message for="adi"/>
 
-                <h:outputText value="tetkik Salonu"/>
+                <h:outputText value="Tetkik Salonu"/>
                 <h:outputText value="*"/>
                 <p:selectOneMenu id="salon" value="#{tetkikBean.salon}" converter="#{listConverter}">
                     <f:selectItem itemLabel="Salon Seçiniz" itemValue="#{null}"/>
