--- a/src/main/resources/META-INF/resources/index.xhtml
+++ b/src/main/resources/META-INF/resources/index.xhtml
@@ -13,7 +13,7 @@
 		<h:panelGrid columns="2">
 
 			<h:outputLabel value="Deneme Ad: " />
-			<p:inputText value="#{userController.userImp.username}" />
+			<p:inputText value="#{userController.user.username}" />
 
 			<h:outputLabel value="Deneme ad2 : " />
 			<p:inputText value="#{userController.deneme}" />
