--- a/src/main/resources/META-INF/resources/HastaBasvuru.xhtml
+++ b/src/main/resources/META-INF/resources/HastaBasvuru.xhtml
@@ -3,7 +3,8 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Kullanıcı Tanım</title>
 
@@ -42,12 +43,11 @@
         <div class="leftPanel">
 
             <h:panelGrid>
-                <p:dataTable id="hstBsvr" var="hasta" value="#{hastaBean.hastaList}" selectionMode="single"
-                             selection="#{hastaBean.selectedHasta}" rowKey="#{hasta.id}">
-
-                    <!--<p:ajax event="rowDblselect" listener="#{hastaBean.onDcRowSelect}"-->
-                            <!--update=":FRMHastaBsvr:hstBsvrPg"/>-->
-                    <p:column headerText="Hasta Adı" filterBy="#{hasta.hastaAdi}" footerText="contains"
+                <p:dataTable id="hstBsvr" var="hasta" value="#{hastaBasvuruBean.hastaList}" selectionMode="single"
+                             selection="#{hastaBasvuruBean.selectedHasta}" rowKey="#{hasta.id}">
+                    <p:ajax event="rowDblselect" listener="#{hastaBasvuruBean.onDcRowSelect}"
+                            update=":FRMHastaBsvr:hstBsvrPg"/>
+                    <p:column headerText="Hasta Adı" filterBy="#{hasta.hastaAdi}"
                               filterMatchMode="contains">
                         <h:outputText value="#{hasta.hastaAdi}"/>
                     </p:column>
@@ -66,173 +66,155 @@
                 </p:dataTable>
             </h:panelGrid>
         </div>
-        <!--<div class="rightPanel">-->
-            <!--<h:panelGrid id="hstBsvrPg">-->
-                <!--<p:row>-->
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Hasta Adı"/>-->
-                    <!--</p:column>-->
-                    <!--<p:outputLabel/>-->
-                    <!--<p:outputLabel/>-->
-                    <!--<p:column>-->
-                        <!--<p:inputText id="ad" value="#{hastaBean.hasta.hastaAdi}" required="true"-->
-                                     <!--requiredMessage="Hasta adı Zorunlu Alandır!"/>-->
-                        <!--<p:outputLabel/>-->
-                        <!--<p:outputLabel/>-->
-                    <!--</p:column>-->
+        <div class="rightPanel">
+            <h:panelGrid id="hstBsvrPg">
+                <p:row>
+                    <p:column>
+                        <p:outputLabel value="Hasta Adı"/>
+                    </p:column>
+                    <p:outputLabel/>
+                    <p:outputLabel/>
+                    <p:column>
+                        <p:inputText id="ad" value="#{hastaBasvuruBean.hasta.hastaAdi}" required="true"
+                                     requiredMessage="Hasta adı Zorunlu Alandır!"/>
+                        <p:outputLabel/>
+                        <p:outputLabel/>
+                    </p:column>
 
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Hasta Soyadı"/>-->
-                        <!--<p:outputLabel/>-->
-                        <!--<p:outputLabel/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:inputText id="soyad" value="#{hastaBean.hasta.hastaSoyadi}" required="true"-->
-                                     <!--requiredMessage="Hasta Soyadı Zorunlu Alandır!"/>-->
-                        <!--<p:outputLabel/>-->
-                        <!--<p:outputLabel/>-->
-                    <!--</p:column>-->
+                    <p:column>
+                        <p:outputLabel value="Hasta Soyadı"/>
+                        <p:outputLabel/>
+                        <p:outputLabel/>
+                    </p:column>
+                    <p:column>
+                        <p:inputText id="soyad" value="#{hastaBasvuruBean.hasta.hastaSoyadi}" disabled="true"/>
+                        <p:outputLabel/>
+                        <p:outputLabel/>
+                    </p:column>
 
-                <!--</p:row>-->
+                </p:row>
 
-                <!--<p:row>-->
-                    <!--<p:column><p:outputLabel value="Hasta Kimlik No"/></p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:inputText id="kimlikNo" value="#{hastaBean.hasta.hastaKimlikNo}" required="true"-->
-                                     <!--requiredMessage="Hasta Kimlik Numarası Zorunlu Alandır!"/>-->
-                        <!--<p:outputLabel/>-->
-                        <!--<p:outputLabel/>-->
-                    <!--</p:column>-->
+                <p:row>
+                    <p:column><p:outputLabel value="Hasta Kimlik No"/></p:column>
+                    <p:column>
+                        <p:inputText id="kimlikNo" value="#{hastaBasvuruBean.hasta.hastaKimlikNo}" disabled="true"/>
+                    </p:column>
+                    <p:outputLabel/>
+                    <p:outputLabel/>
 
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Cinsiyet"/>-->
-                        <!--<p:outputLabel/>-->
-                        <!--<p:outputLabel/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:selectOneMenu id="cinsiyet" value="#{hastaBean.cinsiyet}" converter="#{cinsiyetConverter}">-->
-                            <!--<f:selectItem itemLabel="Seçiniz" itemValue=""/>-->
-                            <!--<f:selectItems var="cinsiyet" value="#{hastaBean.cinsiyetList}" itemValue="#{cinsiyet.kodu}"-->
-                                           <!--itemLabel="#{cinsiyet.adi}"/>-->
-                        <!--</p:selectOneMenu>-->
-                    <!--</p:column>-->
-                <!--</p:row>-->
+                    <p:column>
+                        <p:outputLabel value="Cinsiyet"/>
+                        <p:outputLabel/>
+                        <p:outputLabel/>
+                    </p:column>
+                    <p:column>
+                        <p:inputText id="cinsiyet" value="#{hastaBasvuruBean.hasta.cinsiyet}" disabled="true"/>
+                    </p:column>
+                </p:row>
 
-                <!--<p:row>-->
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Dogum Tarihi"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:calendar value="#{hastaBean.hasta.dogumTarihi}" locale="tr" navigator="true"-->
-                                    <!--showButtonPanel="true" pattern="dd.MM.yyyy"/>-->
-                    <!--</p:column>-->
+                <p:row>
+                    <p:column>
+                        <p:outputLabel value="Dogum Tarihi"/>
+                    </p:column>
+                    <p:column>
+                        <p:calendar value="#{hastaBasvuruBean.hasta.dogumTarihi}" locale="tr" navigator="true"
+                                    showButtonPanel="true" pattern="dd.MM.yyyy" disabled="true"/>
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value="Başvuru Numarası"/>
+                    </p:column>
+                    <p:column>
+                        <p:inputText value="#{hastaBasvuruBean.hastaBasvuru.basvuruNo}"/>
+                    </p:column>
+                </p:row>
 
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Dogum Yeri "/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:inputText value="#{hastaBean.hasta.dogumYeri}" required="true"-->
-                                     <!--requiredMessage="Dogum Yeri Zorunludur"/>-->
-                    <!--</p:column>-->
-                <!--</p:row>-->
+                <p:row>
+                    <p:column>
+                        <p:outputLabel value="Hasta Kurum"/>
+                    </p:column>
+                    <p:column>
+                        <p:column>
+                            <p:selectOneMenu id="hastaKurum" value="#{hastaBasvuruBean.hastaBasvuru.hastaKurum}">
+                                <f:selectItem itemLabel="Seçiniz" itemValue=""/>
+                                <f:selectItem itemLabel="SGK" itemValue="SGK"/>
+                                <f:selectItem itemLabel="Yeşil Kart" itemValue="Yeşil Kart"/>
+                                <f:selectItem itemLabel="Resmi Kurum" itemValue="Resmi Kurum"/>
+                            </p:selectOneMenu>
+                        </p:column>
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value="Öncelik"/>
+                    </p:column>
+                    <p:column>
+                        <p:selectOneMenu id="oncelik" value="#{hastaBasvuruBean.hastaBasvuru.oncelik}">
+                            <f:selectItem itemLabel="Seçiniz" itemValue=""/>
+                            <f:selectItem itemLabel="65 Yaş Üstü" itemValue="65_YAS_USTU"/>
+                            <f:selectItem itemLabel="Engelli" itemValue="ENGELLI"/>
+                        </p:selectOneMenu>
+                    </p:column>
+                </p:row>
+                <p:row>
+                    <p:column>
+                        <p:outputLabel value="Açılmama"/>
+                    </p:column>
+                    <p:column>
+                        <p:inputTextarea value="#{hastaBasvuruBean.hastaBasvuru.aciklama}"/>
+                    </p:column>
+                </p:row>
 
-                <!--<p:row>-->
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Anne Adı"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:inputText value="#{hastaBean.hasta.anneAdi}"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Baba Adı"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:inputText value="#{hastaBean.hasta.babaAdi}"/>-->
-                    <!--</p:column>-->
-                <!--</p:row>-->
-                <!--<p:row>-->
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Hasta Cep Telefonu"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:inputMask id="phonenum" value="#{hastaBean.hasta.hastaCepTelefonu}" mask="(999) 999-9999"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Hasta Ev Telefonu"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:inputMask id="homenum" value="#{hastaBean.hasta.hastaEvTelefonu}" mask="(999) 999-9999"/>-->
-                    <!--</p:column>-->
-                <!--</p:row>-->
-                <!--<p:row>-->
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Hasta yakınının telefonu"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:inputMask id="num" value="#{hastaBean.hasta.hastaYakiniTelefon}" mask="(999) 999-9999"/>-->
+                <!--</h:panelGrid>-->
+                <!--<h:panelGrid id="hstBsvDty" columns="4">-->
+                <p:row>
+                    <p:column>
+                        <p:outputLabel value="Birimi"/>
+                    </p:column>
+                    <p:column>
+                        <p:selectOneMenu id="birim" value="#{hastaBasvuruBean.birim}" converter="#{listConverter}">
+                            <f:selectItem itemLabel="Seçiniz-" itemValue="#{null}"/>
+                            <f:selectItems value="#{hastaBasvuruBean.birimList}" var="birim" itemValue="#{birim}"
+                                           itemLabel="#{birim.birimAdi}"/>
+                        </p:selectOneMenu>
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value="Personel"/>
+                    </p:column>
+                    <p:column>
+                        <p:selectOneMenu id="personel" value="#{hastaBasvuruBean.personel}"
+                                         converter="#{listConverter}">
+                            <f:selectItem itemLabel="Seçiniz" itemValue="#{null}"/>
+                            <f:selectItems value="#{hastaBasvuruBean.personelList}" var="personel"
+                                           itemValue="#{personel}"
+                                           itemLabel="#{personel.personelAdi}+' '+#{personel.personelSoyadi}"/>
+                        </p:selectOneMenu>
+                    </p:column>
+                </p:row>
+                <p:row>
+                    <p:column>
+                        <p:commandButton value="Kaydet" actionListener="#{hastaBasvuruBean.save()}" ajax="false"
+                                         icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
+                    </p:column>
+                    <p:column>
+                        <p:commandButton value="Sil" actionListener="#{hastaBasvuruBean.delete()}" ajax="false"
+                                         icon="ui-icon-trash" style="left: 135px"/>
+                    </p:column>
+                </p:row>
+                <!--<h:outputText value="Birimi"/>-->
+                <!--<h:outputText value="*"/>-->
+                <!--<p:selectOneMenu id="birim" value="#{hastaBasvuruBean.birim}" converter="#{listConverter}">-->
+                <!--<f:selectItem itemLabel="Seçiniz-" itemValue="#{null}"/>-->
+                <!--<f:selectItems value="#{hastaBasvuruBean.birimList}" var="birim" itemValue="#{birim}"-->
+                <!--itemLabel="#{birim.birimAdi}"/>-->
+                <!--</p:selectOneMenu>-->
 
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Hasta Yakınlık derecesi"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:inputText id="hasYakDer" value="#{hastaBean.hasta.hastaYakinlikDerecesi}"/>-->
-                    <!--</p:column>-->
-                <!--</p:row>-->
-                <!--<p:row>-->
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Hasta Email"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:inputText id="email" value="#{hastaBean.hasta.hastaEmail}"-->
-                                     <!--validatorMessage="Email hatalıdır!">-->
-                            <!--<f:validateRegex-->
-                                    <!--pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$"/>-->
-                        <!--</p:inputText>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Hasta Kan Grubu"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:selectOneMenu id="kanGrubu" value="#{hastaBean.kanGrubu}">-->
-                            <!--<f:selectItem itemLabel="Seçiniz" itemValue=""/>-->
-                            <!--<f:selectItems var="kanGrubu" value="#{hastaBean.kanGrubuList}" itemValue="#{kanGrubu}"-->
-                                           <!--itemLabel="#{kanGrubu.name()}"/>-->
-                        <!--</p:selectOneMenu>-->
-                    <!--</p:column>-->
-                <!--</p:row>-->
-                <!--<p:row>-->
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Hasta Medeni Hali"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:selectOneMenu id="medeniHal" value="#{hastaBean.hasta.hastaMedeniHali}">-->
-                            <!--<f:selectItem itemLabel="Seçiniz" itemValue=""/>-->
-                            <!--<f:selectItem itemLabel="Bekar" itemValue="Bekar"/>-->
-                            <!--<f:selectItem itemLabel="Evli" itemValue="Evli"/>-->
-                            <!--<f:selectItem itemLabel="Dul" itemValue="Dul"/>-->
-                        <!--</p:selectOneMenu>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:outputLabel value="Hastanın Adresi"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:inputTextarea id="adres" placeholder="Adres" value="#{hastaBean.hasta.adres}"/>-->
-                    <!--</p:column>-->
-                <!--</p:row>-->
-
-                <!--<p:row>-->
-                    <!--<p:column>-->
-                        <!--<p:commandButton value="Kaydet" actionListener="#{hastaBean.saveHasta()}" ajax="false"-->
-                                         <!--icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>-->
-                    <!--</p:column>-->
-                    <!--<p:column>-->
-                        <!--<p:commandButton value="Sil" actionListener="#{personelBean.deleteHasta()}" ajax="false"-->
-                                         <!--icon="ui-icon-trash" style="left: 135px"/>-->
-                    <!--</p:column>-->
-                <!--</p:row>-->
-            <!--</h:panelGrid>-->
-        <!--</div>-->
+                <!--<h:outputText value="Personel"/>-->
+                <!--<h:outputText value="*"/>-->
+                <!--<p:selectOneMenu id="personel" value="#{hastaBasvuruBean.personel}" converter="#{listConverter}" style="width: 100% !important">-->
+                <!--<f:selectItem itemLabel="Seçiniz" itemValue="#{null}"/>-->
+                <!--<f:selectItems value="#{hastaBasvuruBean.personelList}" var="personel" itemValue="#{personel}"-->
+                <!--itemLabel="#{personel.personelAdi}+' '+#{personel.personelSoyadi}"/>-->
+                <!--</p:selectOneMenu>-->
+            </h:panelGrid>
+        </div>
     </h:form>
 </h:body>
 </html>
